--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </section>
     <section id="section3" data-nav="Fact 3">
       <div class="landing__container">
-        <h2>A teaspoonful of neutron star would weigh 6 billion tons</h2>
+        <h2>A teaspoonful of neutron star would weight 6 billion tons</h2>
         <p>A neutron star is the remnants of a massive star that has run out of fuel. The dying star explodes in a supernova while its core collapses in on itself due to gravity, forming a super-dense neutron star. Astronomers measure the mind-bogglingly large masses of stars or galaxies in solar masses, with one solar mass equal to the Sun’s mass (that is, 2 x 1030 kilograms/4.4 x 1030 pounds). Typical neutron stars have a mass of up to three solar masses, which is crammed into a sphere with a radius of approximately ten kilometres (6.2 miles) – resulting in some of the densest matter in the known universe.</p>
       </div>
     </section>
